Fix works display on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -428,11 +428,6 @@ h1, h2, h3, h4 {
           outline: 1px solid rgba(0, 0, 0, .1) !important;
           outline-offset: -1px;
           align-items: center !important;
-
-          img {
-            width: 180px !important;
-            height: 180px !important;
-          }
         }
       }
 
@@ -442,11 +437,6 @@ h1, h2, h3, h4 {
           outline: 1px solid rgba(0, 0, 0, .1) !important;
           outline-offset: -1px;
           align-items: center !important;
-
-          img {
-            width: 198px !important;
-            height: 145px !important;
-          }
         }
       }
 
@@ -456,11 +446,6 @@ h1, h2, h3, h4 {
           outline: 1px solid rgba(0, 0, 0, .1) !important;
           outline-offset: -1px;
           align-items: center !important;
-
-          img {
-            width: 208px !important;
-            height: 155px !important;
-          }
         }
       }
 
@@ -475,17 +460,23 @@ h1, h2, h3, h4 {
 
       .image_link {
         background: #F3F4F6;
-        width: 414px;
-        height: 259px;
         border-radius: 12px;
         display: flex;
         justify-content: center;
         padding: 10px 10px 0;
         align-items: flex-end;
 
-        img {
-          width: 320px;
-          height: 230px;
+        @include media-breakpoint-up(xl) {
+          height: 259px;
+
+          img {
+            width: 320px;
+            height: 230px;
+          }
+        }
+
+        @include media-breakpoint-up(xxl) {
+          width: 414px;
         }
       }
 
